--- a/abnreports.html
+++ b/abnreports.html
@@ -708,13 +708,13 @@
           </div>
         </div>
 
-        <details style="background:#f8f9ff;border:1px solid #e5e7eb;border-radius:8px;padding:10px;">
-          <summary style="cursor:pointer;font-weight:bold;color:#667eea;">対応ヘッダ（エクスポートと同じ）</summary>
-          <div style="font-size:.9rem;color:#333;margin-top:8px;line-height:1.6;">
-            必須: 整理No, 部署, 発生日, 異常内容, 対応内容<br>
-            任意: ライン名, 発生時刻, 再開時刻, 遡り, 処置者, 技術対応, 技術処置者, 発見タイミング, 前回終物確認, 命数有無, 命数到達, 保全単位, 技術対応, 再発新規, 暫定, 状態, _id, 停止時間(分)
-          </div>
-        </details>
+<details style="background:#f8f9ff;border:1px solid #e5e7eb;border-radius:8px;padding:10px;">
+  <summary style="cursor:pointer;font-weight:bold;color:#667eea;">対応ヘッダ（エクスポートと同じ）</summary>
+  <div style="font-size:.9rem;color:#333;margin-top:8px;line-height:1.6;">
+    必須: 整理No, 部署, 発生日, 異常内容, 対応内容<br>
+    任意: ライン名, 発生時刻, 再開時刻, 停止時間(分), 遡り, 品質対応, 処置者, 技術対応, 技術処置者, 最終者名, 発見タイミング, 発生タイミング, 前回終物確認, 命数有無, 命数到達, 保全単位, 技術対応内容, 再発新規, 対策状況, 暫定, 状態, _id
+  </div>
+</details>
 
         <div id="importPreview" style="background:#fff;border:1px solid #eee;border-radius:8px;padding:12px;min-height:80px;">
           <em style="color:#777;">ファイルを選ぶと、ここにプレビューと検証結果が表示されます。</em>
@@ -1167,16 +1167,36 @@ document.addEventListener('click', (e)=>{
     });
   }
 
-   const HEADER_MAP = {
-    '整理No':'serialNo','部署':'department','ライン名':'lineName','発生日':'occurrenceDate',
-    '発生時刻':'occurrenceTime','再開時刻':'restartTime','異常内容':'anomalyContent','対応内容':'actionTaken',
-    '遡り':'traceback','品質対応':'qualityResponse','処置者':'handler','技術対応':'techRequest','技術対応区分':'techRequest',
-    '技術処置者':'techHandler','発見タイミング':'discoveryTiming','前回終物確認':'previousCheck',
-    '命数有無':'lifespan','命数到達':'lifespanReached','保全単位':'maintenanceUnit',
-    '技術対応内容':'rootCauseAction','再発新規':'recurrenceType','対策状況':'measureStatus',
-    '暫定':'affirmation','状態':'_statusText','停止時間(分)':'_stopMin','_id':'_id'
-  };
-  
+const HEADER_MAP = {
+  '整理No':'serialNo',
+  '部署':'department',
+  'ライン名':'lineName',
+  '発生日':'occurrenceDate',
+  '発生時刻':'occurrenceTime',
+  '再開時刻':'restartTime',
+  '異常内容':'anomalyContent',
+  '対応内容':'actionTaken',
+  '遡り':'traceback',
+  '品質対応':'qualityResponse',
+  '処置者':'handler',
+  '技術対応':'techRequest',
+  '技術対応区分':'techRequest',
+  '技術処置者':'techHandler',
+  '最終者名':'techHandler',  // ← 追加（技術処置者と同じ）
+  '発見タイミング':'discoveryTiming',
+  '発生タイミング':'discoveryTiming',  // ← 追加（発見タイミングと同じ）
+  '前回終物確認':'previousCheck',
+  '命数有無':'lifespan',
+  '命数到達':'lifespanReached',
+  '保全単位':'maintenanceUnit',
+  '技術対応内容':'rootCauseAction',
+  '再発新規':'recurrenceType',
+  '対策状況':'measureStatus',
+  '暫定':'affirmation',
+  '状態':'_statusText',
+  '停止時間(分)':'_stopMin',
+  '_id':'_id'
+};
 /* CSVインポート */
   function parseCSVLoose(text){
     const rows=[]; let cur=''; let row=[]; let inQuotes=false;
