--- a/abnreports.html
+++ b/abnreports.html
@@ -1366,7 +1366,7 @@ document.getElementById('csvFileInput').addEventListener('change', async (e)=>{
         <tbody>
           ${sample.map(r=>`
             <tr>
-              <td style="border-bottom:1px solid #eee;padding:6px;">${r.整理№}</td>
+              <td style="border-bottom:1px solid #eee;padding:6px;">${r.'整理№'}</td>
               <td style="border-bottom:1px solid #eee;padding:6px;">${r.部署}</td>
               <td style="border-bottom:1px solid #eee;padding:6px;">${r.発生日}</td>
               <td style="border-bottom:1px solid #eee;padding:6px;">${r.異常内容}</td>
