--- a/abnreports.html
+++ b/abnreports.html
@@ -1339,7 +1339,7 @@ document.getElementById('csvFileInput').addEventListener('change', async (e)=>{
 
   const previewCount = Math.min(5, mappedRows.length);
   const sample = mappedRows.slice(0, previewCount).map(o => ({
-    '整理No.':o.serialNo||'-', 
+    整理No.:o.serialNo||'-', 
     部署:o.department||'-', 
     発生日:o.occurrenceDate||'-',
     異常内容:(o.anomalyContent||'-').slice(0,20)+(o.anomalyContent?.length>20?'...':''),
