--- a/abnreports.html
+++ b/abnreports.html
@@ -1166,6 +1166,7 @@ document.addEventListener('click', (e)=>{
   }
 
 const HEADER_MAP = {
+   '整理№':'serialNo',     
   '整理No.':'serialNo',
   '部署':'department',
   'ライン名':'lineName',
