--- a/abnreports.html
+++ b/abnreports.html
@@ -13,7 +13,13 @@
   .tabs{display:flex;background:#fff;margin:15px 0 0;border-radius:8px 8px 0 0;overflow:hidden;box-shadow:0 2px 5px rgba(0,0,0,.1)}
   .tab{flex:1;padding:15px;text-align:center;cursor:pointer;background:#f8f9fa;border:none;font-size:1rem;font-weight:bold;transition:.3s;color:#666}
   .tab.active{background:#fff;color:#667eea;border-bottom:3px solid #667eea}
-  .tab-content{display:none;background:#fff;padding:20px;border-radius:0 0 8px 8px;box-shadow:0 2px 10px rgba(0,0,0,.1)}
+  .tab-content{
+  display:none !important;  /* 基本は非表示 */
+  background:#fff;
+  padding:20px;
+  border-radius:0 0 8px 8px;
+  box-shadow:0 2px 10px rgba(0,0,0,.1);
+}
   .tab-content.active{display:block}
   .form-group{margin-bottom:16px}
   .form-group label{display:block;margin-bottom:8px;font-weight:bold;color:#333;font-size:.95rem}
@@ -381,7 +387,9 @@
   z-index:2;
 }
 
-
+.tab-content{ display:none !important; }
+.tab-content.active{ display:block !important; }
+ 
  
 </style>
 </head>
@@ -883,7 +891,37 @@ onAuthStateChanged(auth, (user)=>{
     signOutBtn.style.display='none';
   }
 });
+// ── タブ切替（常に1枚だけ active） ──
+const tabs   = document.querySelectorAll('.tabs .tab');
+const panels = document.querySelectorAll('.tab-content');
 
+function activateTab(id){
+  // すべてのタブとパネルから active を削除
+  tabs.forEach(t => t.classList.remove('active'));
+  panels.forEach(p => {
+    p.classList.remove('active');
+    p.style.display = 'none';  // ← 追加: 強制的に非表示
+  });
+  
+  // 選択されたタブとパネルのみ active にする
+  const t = document.querySelector(`.tabs .tab[data-tab="${id}"]`);
+  const p = document.getElementById(id);
+  if (t) t.classList.add('active');
+  if (p) {
+    p.classList.add('active');
+    p.style.display = 'block';  // ← 追加: 強制的に表示
+  }
+  
+  // 履歴タブの場合のみ renderHistory を実行
+  if (id === 'history') {
+    renderHistory();
+  }
+}
+
+tabs.forEach(t => t.addEventListener('click', () => activateTab(t.dataset.tab)));
+
+// 初期表示
+activateTab('manufacturing');
 // 例：編集モーダルを開く関数の末尾で
 function openEditModal(/* ... */){
   renderEditModalUI();   // ここで edit_* の input が生成される
@@ -1597,7 +1635,7 @@ ${problems.length?'\n一部エラー:\n'+problems.slice(0,10).join('\n'):''}`);
       `<option value="${no}">${no} (${count}件)</option>`
     ).join('');
   }
-  
+
   function showWordSuggestions(targetId, suggestionsBoxId, wordsContainerId, field){
     const serialNo = document.getElementById('serialNo').value.trim();
     const words = extractCommonWords(field, serialNo);
@@ -2209,9 +2247,14 @@ document.getElementById('technicalForm').addEventListener('submit', async (e) =>
     isSubmittingTech = false;
   }
 });
+function isHistoryActive(){
+  const pane = document.getElementById('history'); // 履歴タブのcontent要素ID
+  return pane && pane.classList.contains('active');
+}
 
  /* 履歴描画：フィルター対応 + ページング */
   function renderHistory(){
+     if (!isHistoryActive()) return;   // ← ガード
     const items=[...filteredCache].sort((a,b)=> (b.occurrenceDate||'').localeCompare(a.occurrenceDate||''));
     const cardWrap=document.getElementById('cardView');
     
@@ -2452,6 +2495,7 @@ ${(item.recurrenceType==='再発' && item.measureStatus) ?
       tab.classList.add('active');
       const targetId = tab.getAttribute('data-tab');
       document.getElementById(targetId).classList.add('active');
+      if (targetId === 'history') renderHistory();
     });
   });
 
@@ -2667,7 +2711,7 @@ document.querySelectorAll('.view-toggle button').forEach(b=>{
       fullscreenBtn.style.display = 'inline-block';
     }
     
-    renderHistory();
+  if (isHistoryActive()) renderHistory();
   });
 });
 
